refactor!: purge all reference-implementation lineage — standalone project
- delete storage/legacy importer package + test (no legacy importer, ever)
- LegacyImportSupport -> RowJson (it parses OUR schema's JSON columns)
- update-checker defaults + plugin.yml website point at FableFactions
- docs: pvp-*.md -> ref-*.md, all tokens genericized to 'the reference
  implementation'; %fable_*% placeholders only; dynmap layer id fablefactions
- CONTRACTS addendum 7: standalone rule is normative for all future waves

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>